--- a/migration-pkg/DESCRIPTION
+++ b/migration-pkg/DESCRIPTION
@@ -7,5 +7,9 @@ Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What Licence is it under ?
-Depends: Rcpp (>= 0.10.3)
+Depends:
+    Rcpp (>= 0.10.3)
 LinkingTo: Rcpp
+Collate:
+    'rcpp_hello_world.R'
+    'RcppExports.R'
