--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -1,2 +1,1 @@
-cxx_test(cowner4Test cowner4Test.cpp migration_library) #specify a new test, and which files it depends on
-cxx_test(cowner5Test cowner5Test.cpp migration_library) #specify a new test, and which files it depends on
+cxx_test(CMigTest CMigTest.cpp migration_library) #specify a new test, and which files it depends on
