finished dev6. its working! could maybe expose the class directly to R and do the testing there. however, the constructor is quite complicated, not sure how well modules are going to work.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -2,6 +2,11 @@ cmake_minimum_required (VERSION 2.8) # We are using the cmake build tool, with f
 project (Migration)
 include_directories(src) # This location "src" is added to the list of locations 
                          # which are searched when resolving #include statements in C/C++
+#include_directories(/Library/Frameworks/R.framework/Versions/3.0/Resources/library/Rcpp/include)
+#include_directories(/Library/Frameworks/R.framework/Resources/include)
+#link_directories(/Library/Frameworks/R.framework/Versions/3.0/Resources/library/Rcpp/lib)
+#link_directories(/Library/Frameworks/R.framework/Resources/lib)
+
 add_subdirectory(src) # Look in the CMakeLists.txt file for explanation on how to build our library code
 add_executable(migration migration.cpp) # The executable to make is 
 									 # called "migration" and depends on the listed source files and libraries
