--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -1,1 +1,2 @@
 cxx_test(CMigTest CMigTest.cpp migration_library) #specify a new test, and which files it depends on
+cxx_test(CMigTestIndi CMigTestIndivid.cpp migration_library) #specify a new test, and which files it depends on
