--- a/migration-pkg/DESCRIPTION
+++ b/migration-pkg/DESCRIPTION
@@ -10,7 +10,8 @@ License: GPL-3
 Depends:
     Rcpp (>= 0.10.3),
     data.table,
-    rutils
+    rutils,
+    RcppSimpleTensor
 LinkingTo: Rcpp
 Collate:
     'rcpp_hello_world.R'
