--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -2,9 +2,14 @@ cmake_minimum_required (VERSION 2.8) # We are using the cmake build tool, with f
 project (Migration)
 include_directories(src) # This location "src" is added to the list of locations 
                          # which are searched when resolving #include statements in C/C++
+
+# this includes the Rcpp library ?
 #include_directories(/Library/Frameworks/R.framework/Versions/3.0/Resources/library/Rcpp/include)
-#include_directories(/Library/Frameworks/R.framework/Resources/include)
 #link_directories(/Library/Frameworks/R.framework/Versions/3.0/Resources/library/Rcpp/lib)
+#include_directories(/usr/local/include)
+
+## and this the standard R header files
+#include_directories(/Library/Frameworks/R.framework/Resources/include)
 #link_directories(/Library/Frameworks/R.framework/Resources/lib)
 
 add_subdirectory(src) # Look in the CMakeLists.txt file for explanation on how to build our library code
