added class for 6-dim problem. location choice. R example is dev8

--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -1,2 +1,3 @@
 cxx_test(CMigTest CMigTest.cpp migration_library) #specify a new test, and which files it depends on
 cxx_test(CMigTestIndi CMigTestIndivid.cpp migration_library) #specify a new test, and which files it depends on
+cxx_test(CMig6Test CMig6Test.cpp migration_library) #specify a new test, and which files it depends on
