finished migration model with continuous solution. however spline approx of future value is not doing well because it tails of so fast at low asset values. will switch to linear approx of ev now.

--- a/migration-pkg/DESCRIPTION
+++ b/migration-pkg/DESCRIPTION
@@ -11,8 +11,9 @@ Depends:
     Rcpp (>= 0.10.3),
     data.table,
     rutils,
-    RcppSimpleTensor
-LinkingTo: Rcpp
+    RcppSimpleTensor,
+    RcppGSL
+LinkingTo: Rcpp, RcppGSL
 Collate:
     'rcpp_hello_world.R'
     'RcppExports.R'
