unlinked CMig7 and CMig8 from build

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -15,10 +15,10 @@ include_directories(src) # This location "src" is added to the list of locations
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
 
 # add boost
-find_package(Boost 1.53.0 )
-if(Boost_FOUND)
-	include_directories(${Boost_INCLUDE_DIRS})
-endif()
+#find_package(Boost 1.53.0 )
+#if(Boost_FOUND)
+	#include_directories(${Boost_INCLUDE_DIRS})
+#endif()
 
 # add GSL
 find_package(GSL REQUIRED)
@@ -28,12 +28,12 @@ set(LIBS ${LIBS} ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
 # add my cpp source files
 add_subdirectory(src) 
 add_executable(migration migration.cpp) 
-add_executable(migration2 migration2.cpp) 
-add_executable(migration3 migration3.cpp) 
+#add_executable(migration2 migration2.cpp) 
+#add_executable(migration3 migration3.cpp) 
 									
 target_link_libraries(migration migration_library ${LIBS}) # Add our library of reaction system code to the executable
-target_link_libraries(migration2 migration_library ${LIBS}) # Add our library of reaction system code to the executable
-target_link_libraries(migration3 migration_library ${LIBS}) # Add our library of reaction system code to the executable
+#target_link_libraries(migration2 migration_library ${LIBS}) # Add our library of reaction system code to the executable
+#target_link_libraries(migration3 migration_library ${LIBS}) # Add our library of reaction system code to the executable
 #link_libraries( ${LIBS} )
 
 # Boilerplate to enable the Google testing framework
