--- a/cpp/test/CMakeLists.txt
+++ b/cpp/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-cxx_test(CMigTest CMigTest.cpp migration_library) #specify a new test, and which files it depends on
+#cxx_test(CMigTest CMigTest.cpp migration_library) #specify a new test, and which files it depends on
 cxx_test(CMigTestIndi CMigTestIndivid.cpp migration_library) #specify a new test, and which files it depends on
 cxx_test(CMig6Test CMig6Test.cpp migration_library) #specify a new test, and which files it depends on
-cxx_test(CMig7Test CMig7Test.cpp migration_library ${LIBS}) #specify a new test, and which files it depends on
+#cxx_test(CMig7Test CMig7Test.cpp migration_library ${LIBS}) #specify a new test, and which files it depends on
