--- a/mig-pkg/DESCRIPTION
+++ b/mig-pkg/DESCRIPTION
@@ -12,7 +12,7 @@ Depends:
     data.table,
     rutils,
     RcppSimpleTensor,
-    RcppGSL,gridR,survey,texreg
+    RcppGSL,gridR,survey,texreg,RSQLite
 LinkingTo: Rcpp, RcppGSL
 Collate:
     'rcpp_hello_world.R'
