--- a/mig-pkg/DESCRIPTION
+++ b/mig-pkg/DESCRIPTION
@@ -9,7 +9,8 @@ Description: More about what it does (maybe more than one line)
 License: GPL-3
 Depends:
     data.table,
-    RSQLite
+    RSQLite,
+    stringr
 Collate:
     'ufun.r'
     'analyze_solution.r'
