trying to predict income for all guys. it's tricky but almost there.

--- a/mig-pkg/DESCRIPTION
+++ b/mig-pkg/DESCRIPTION
@@ -12,7 +12,9 @@ Depends:
     RSQLite,
     stringr,
     nlme,
-    texreg
+    texreg,
+    survey,
+    zoo
 Collate:
     'ufun.r'
     'analyze_solution.r'
