towards getting the logit dataset up and running. it's very big. may have to move entire thing towards databases.

--- a/mig-pkg/DESCRIPTION
+++ b/mig-pkg/DESCRIPTION
@@ -18,7 +18,9 @@ Depends:
     texreg,
     survey,
     gridExtra,
-    MARSS
+    MARSS,
+    devtools,
+    xts
 Collate:
     'SippAnalyse.r'
     'SippPrepare.r'
