added tests on data builder

--- a/mig-pkg/Makefile
+++ b/mig-pkg/Makefile
@@ -8,3 +8,6 @@ install:
 
 sipp.stats:
 	Rscript -e "source('examples/sipp-sumstats.r')"
+
+test:
+	Rscript -e "library(testthat); test_dir('tests/testthat/')"
