changed runMNLogit. saved trial data to disk.

--- a/mig-pkg/DESCRIPTION
+++ b/mig-pkg/DESCRIPTION
@@ -22,7 +22,8 @@ Depends:
     devtools,
     xts,
     mnlogit,
-    testthat
+    testthat,
+	xtable
 Collate:
     'SippAnalyse.r'
     'SippPrepare.r'
