--- a/mig-pkg/NAMESPACE
+++ b/mig-pkg/NAMESPACE
@@ -11,11 +11,10 @@ import(stringr)
 import(survey)
 import(texreg)
 import(zoo)
-import(gridExtra)
 import(quantreg)
+import(grid)
 import(splines)
 import(xtable)
-import(MARSS)
 import(xts)
 	
 
