started with cpp project. not sure if it's worth the effort or if I should just produce the simulation sample in R on the cluster?

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 2.8.4) # We are using the cmake build tool, with features from v2.8 and later
-project (Bankruptcy)
+project (migration)
 include_directories(src) # This location "src" is added to the list of locations 
                          # which are searched when resolving #include statements in C/C++
 
@@ -22,28 +22,30 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
 #endif()
 
 # add GSL
-find_package(GSL REQUIRED)
+#find_package(GSL REQUIRED)
 #include_directories(${GSL_INCLUDE_DIRS} ${GSLCBLAS_INCLUDE_DIRS})
 
 # add interp2d
-include_directories(${GSL_INCLUDE_DIRS} ${GSLCBLAS_INCLUDE_DIRS} /usr/local/include)
+#include_directories(${GSL_INCLUDE_DIRS} ${GSLCBLAS_INCLUDE_DIRS} /usr/local/include)
+include_directories(/usr/local/include)
 
 # add armadillo
 include_directories(/usr/local/include/armadillo)
 
 # put all third party libraries in list "LIBS"
-set(LIBS ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES} interp2d gtest armadillo)
+#set(LIBS ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES} interp2d gtest armadillo)
+set(LIBS gtest armadillo)
 
 
 # add my cpp source files
 add_subdirectory(src) 
-add_executable(solution sol.cpp) 
-
 add_executable(simulation sim.cpp) 
+
+#add_executable(simulation sim.cpp) 
 #add_executable(migration3 migration3.cpp) 
 									
-target_link_libraries(solution bankruptcy_library ${LIBS} ) # Add all libraries to the executable
-target_link_libraries(simulation bankruptcy_library ${LIBS} ) # Add all libraries to the executable
+target_link_libraries(simulation BBL_library ${LIBS} ) # Add all libraries to the executable
+#target_link_libraries(simulation bankruptcy_library ${LIBS} ) # Add all libraries to the executable
 
 
 # Boilerplate to enable the Google testing framework
