--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -1,2 +1,2 @@
 #add_library(migration_library Cmig.cpp CMig6.cpp CMig7.cpp)
-add_library(bankruptcy_library simclass.cpp BK_sol.cpp misc.h)
+add_library(BBL_library BBLsim.cpp )
