--- a/mig-pkg/DESCRIPTION
+++ b/mig-pkg/DESCRIPTION
@@ -11,7 +11,6 @@ Imports:
     stringr,
     nlme,
     texreg,
-    survey,
     quantreg,
     RSQLite,
     xts,
@@ -21,6 +20,7 @@ Imports:
 Depends:
     zoo,
     mnlogit,
+    survey,
     data.table,
     reshape2,
     MARSS,
@@ -38,3 +38,8 @@ Collate:
     'factorModels.r'
     'logit.r'
     'CPS.r'
+    'BBL.r'
+    'housing_saving.r'
+    'income.r'
+    'prices.r'
+    'incomeProcess-class.r'
