--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -1,2 +1,1 @@
-#add_library(migration_library Cmig.cpp CMig6.cpp CMig7.cpp)
-add_library(BBL_library BBLsim.cpp )
+add_library(migration_library Cmig.cpp)
