--- a/mig.jl/src/cluster/hpc_jobs.yaml
+++ b/mig.jl/src/cluster/hpc_jobs.yaml
@@ -26,7 +26,8 @@ irid_slices:
   nnodes:   3
   ppnodes:   12
   numprocs:   36
-  walltime: 05:00
+  hours: 00
+  mins: 45
   logout:   migslices.log
   logerr:   migslices.err
   template: PBS.qsub
@@ -40,7 +41,8 @@ irid_estim:
   nnodes:   3
   ppnodes:   12
   numprocs:   36
-  walltime: 05:00
+  hours: 00
+  mins: 45
   logout:   migslices.log
   logerr:   migslices.err
   template: PBS.qsub
