added some empstat vars to sipp

--- a/mig-pkg/DESCRIPTION
+++ b/mig-pkg/DESCRIPTION
@@ -24,7 +24,8 @@ Depends:
     devtools,
     ggplot2,
     testthat,
-    plyr
+    plyr,
+    MASS
 Collate:
     'SippAnalyse.r'
     'SippPrepare.r'
