data issue: went back to personal income. added flows to model moments

--- a/mig-pkg/DESCRIPTION
+++ b/mig-pkg/DESCRIPTION
@@ -33,7 +33,8 @@ Depends:
     rhdf5,
     psidR,
     erer,
-    tikzDevice
+    tikzDevice,
+    MultinomialCI
 Collate:
     'SippAnalyse.r'
     'SippPrepare.r'
