add makefile with machinefile option

--- a/mig/src/cluster/examples/Makefile
+++ b/mig/src/cluster/examples/Makefile
@@ -1,6 +1,9 @@
 
 estim:
-	julia5 --depwarn=no estimation.jl 500 30
+	julia5 -color=yes -O --machinefile zeppos.txt estimation.jl 500
 
 estim-t:
-	julia5 --depwarn=no estimation.jl 4 3
+	julia5 -color=yes -O --machinefile zeppos.txt estimation.jl 4
+
+estim-m:
+	julia5 estimation.jl 4 
