--- a/mig/src/cluster/examples/Makefile
+++ b/mig/src/cluster/examples/Makefile
@@ -1,9 +1,9 @@
 
 estim:
-	julia5 --color=yes --optimize=3 --machinefile zeppos.txt estimation.jl 500 
+	julia5 --color=yes --optimize=3 --machinefile zeppos.txt estimation.jl 500 > estim.log
 
 estim-t:
-	julia5 --color=yes --optimize=3 --machinefile zeppos.txt estimation.jl 4
+	julia5 --color=yes --optimize=3 --machinefile zeppos.txt estimation.jl 4 > estim.log
 
 estim-m:
 	julia5 --color=yes --optimize=3 estimation.jl 3 
