changed smm criterion to abs percent dev. run 5000 iterations on chain

--- a/mig/src/cluster/examples/Makefile
+++ b/mig/src/cluster/examples/Makefile
@@ -1,6 +1,6 @@
 
 estim:
-	julia5 --color=yes --optimize=3 --machinefile zeppos.txt estimation.jl 500 > estim.log
+	julia5 --color=yes --optimize=3 --machinefile ../subs/hosts.txt estimation.jl 5000 > estim.log
 
 estim-t:
 	julia5 --color=yes --optimize=3 --machinefile zeppos.txt estimation.jl 4 > estim.log
