editing and rerunning ownersWTP2

--- a/mig-pkg/DESCRIPTION
+++ b/mig-pkg/DESCRIPTION
@@ -34,7 +34,8 @@ Depends:
     psidR,
     erer,
     tikzDevice,
-    MultinomialCI
+    MultinomialCI,
+    forecast
 Collate:
     'SippAnalyse.r'
     'SippPrepare.r'
