--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ notifications:
 
 script:
  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
- - julia -e 'Pkg.clone(joinpath(pwd(),"mig.jl")); Pkg.build("mig"); Pkg.test("mig",coverage=true)';
+ - julia mig.jl/install.jl;
+ - julia -e 'Pkg.test("mig",coverage=true)';
 
 after_success:
   - julia -e 'if VERSION >= v"0.7.0-" using Pkg end; cd(Pkg.dir("mig")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
